--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jdjr",
+  "name": "about-org",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -66,7 +66,7 @@
     "eslint-config-next": "15.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "prettier": "^3.3.3",
-    "prisma": "^5.22.0",
+    "prisma": "^6.0.1",
     "prisma-dbml-generator": "^0.12.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
